[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Button_theme.tres" type="Theme" id=1]
[ext_resource path="res://SourceCode/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Right.png" type="Texture" id=3]
[ext_resource path="res://Assets/RightA.png" type="Texture" id=4]
[ext_resource path="res://Assets/Left.png" type="Texture" id=5]
[ext_resource path="res://Assets/LeftA.png" type="Texture" id=6]
[ext_resource path="res://Assets/Click.wav" type="AudioStream" id=7]
[ext_resource path="res://SourceCode/RossPopup.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Levels.png" type="Texture" id=9]
[ext_resource path="res://Assets/Player_theme.tres" type="Theme" id=10]
[ext_resource path="res://Assets/font_40.tres" type="DynamicFont" id=11]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1430.0
margin_top = -1090.0
margin_right = 2570.0
margin_bottom = 2910.0
mouse_filter = 2
color = Color( 0.313726, 0.486275, 0.486275, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -120 )
stream = ExtResource( 7 )

[node name="Title" type="Button" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 980.0
margin_bottom = 359.0
theme = ExtResource( 10 )
disabled = true
text = "MathFinder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 270.0
margin_top = 1030.0
margin_right = 810.0
margin_bottom = 1189.0
focus_mode = 0
theme = ExtResource( 1 )
text = "Start 3x3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Button" parent="."]
margin_left = 270.0
margin_top = 1241.0
margin_right = 810.0
margin_bottom = 1400.0
theme = ExtResource( 1 )
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="."]
margin_left = 45.9839
margin_top = 613.0
margin_right = 245.984
margin_bottom = 813.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="."]
margin_left = 840.0
margin_top = 613.0
margin_right = 1040.0
margin_bottom = 813.0
focus_mode = 0
theme = ExtResource( 1 )
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="RossPopup" parent="." instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 930.0
margin_right = 1080.0
margin_bottom = 150.0

[node name="Levels" type="Sprite" parent="."]
position = Vector2( 540, 713 )
texture = ExtResource( 9 )
hframes = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 540, 960 )
current = true

[node name="Consent" type="Label" parent="."]
margin_left = 270.0
margin_top = 1018.0
margin_right = 810.0
margin_bottom = 1480.0
custom_fonts/font = ExtResource( 11 )
text = "This app is free by showing Google ads. Google will collect data and use a unique identifier on your device to show you ads. The app's privacy policy is available on Google Play."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Button" parent="Consent"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -176.272
margin_top = -100.0
margin_right = 175.728
margin_bottom = -7.00009
theme = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Consent/Ok" to="." method="_on_Ok_pressed"]
